--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "postgres-migrations": "^5.3.0"
@@ -37,6 +38,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.8",
     "@types/pg": "^8.6.3",
     "prisma": "^3.8.0",
