--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "dev": "nodemon --watch src -e ts --exec ts-node -r dotenv/config src/index.ts",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "seed": "ts-node ./prisma/seed.ts",
     "prisma:generate": "prisma generate"
   },
