--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "stripe": "^8.196.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
